src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

body.dark {
  background-color: #1F2023;
  color: #EFEFEF;
}

.dark input,
.dark select {
  background-color: #2e3033;
  border-color: #68696d;
  color: #EFEFEF;
  border-width: 1px;
  border-style: solid;
  -webkit-text-fill-color: #EFEFEF;
  opacity: 1;
}

.dark select option:checked,
.dark select option:hover {
  background-color: #545457;
  color: #EFEFEF;
}

.dark .highlight-load {
  background-color: #303030;
}


.dark .all-button-style {
  background: none;
}

.dark button {
  background-color: #414141;
  border-color: #68696d;
  color: #EFEFEF;
}

.dark input::placeholder {
  color: #c9c9c9;
}

.dark .all-button-style-bg,
.dark .Collapsible__trigger {
  background-color: #3e4583;
  color: #EFEFEF;
}

.dark thead button:hover,
.dark thead button.ascending,
.dark thead button.descending,
.dark .all-button-style:hover,
.dark .Collapsible__trigger:hover,
.dark .react-select__option:active {
  background-color: #4650ac;
  color: #EFEFEF;
}

.dark .all-button-style-bg-red {
  background-color: #582828;
  color: #EFEFEF;
}

.dark .all-button-style-bg-red:hover {
  background-color: #723f3f;
  color: #EFEFEF;
}

.dark .react-select__control {
  background-color: #353538;
  color: #EFEFEF;
  border-color: #4b4b4b;
  box-shadow: none;
}

.dark .react-select__control--is-focused {
  border-color: #4b4b4b;
}

.dark .react-select__indicator {
  color: #c9c9c9;
}

.dark .react-select__indicator:hover {
  color: #EFEFEF;
}

.dark .react-select__menu {
  background-color: #353538;
  color: #EFEFEF;

}

.dark .react-select__placeholder {
  color: #c9c9c9;
}

.dark .react-select__option--is-focused {
  background-color: #68696d;
}

.dark .react-select__multi-value {
  background-color: #68696d;
}

.dark .react-select__multi-value__label {
  color: #EFEFEF;
}

.highlight-red,
.highlight-red:hover,
tbody .tr.highlight-red,
tbody .tr.highlight-red:hover {
  background-color: #FFBBAE;
}

.dark .highlight-red,
.dark .highlight-red:hover,
.dark .tbody .tr.highlight-red,
.dark .tbody .tr.highlight-red:hover {
  background-color: #723f3f;
}


label {
  margin-right: 3px;
  margin-left: 5px;
}

select {
  width: 162px;
}

table {
  width: 100%;
  border-collapse: collapse;
}

thead th {
  border-bottom: 1px solid rgb(61, 61, 61);
}

.dark thead th {
  border-bottom: 1px solid rgb(184, 184, 184);
}

thead button {
  border: 0;
  border-radius: none;
  font-family: inherit;
  font-weight: 500;
  font-size: inherit;
  padding: 0.5em;
  margin-bottom: 1px;
  width: 100%;
  height: 100%;
  white-space: nowrap;
  transition-duration: 0.4s;
}

thead button:hover {
  background-color: #bcd8ff;
  cursor: pointer;
}

thead button.ascending {
  background-color: #bcd8ff;
}

thead button.ascending::after {
  content: '↑';
  display: inline-block;
  margin-left: 1em;
}

thead button.descending {
  background-color: #bcd8ff;
}

thead button.descending::after {
  content: '↓';
  display: inline-block;
  margin-left: 1em;
}

tbody td {
  padding: 0.5em;
  border-bottom: 1px solid #cccccc;
}

.dark tbody td,
.dark .underline {
  border-bottom: 1px solid #4b4b4b;
}

tbody.no-padding td {
  padding: 0.1em;
  padding-top: 0.5em;
  padding-bottom: 0.5em;
}

tbody.remove-border tr:last-child td {
  border-bottom: none;
}

tbody td.button {
  width: 30px;
}

tbody td a {
  width: 100%;
  display: block;
}

.dark tbody td a,
.dark :visited,
.dark a {
  color: #EFEFEF;
}

tbody td a,
a:visited,
a {
  color: black;
}

tbody tr:hover {
  background-color: #eeeeee;
}

.dark tbody tr:hover {
  background-color: #3d3d3d;
}

.spacing {
  margin-top: 16px;
  margin-bottom: 12px;
}

.small-spacing {
  margin-top: 6px;
}

.extra-spacing {
  margin-top: 9px;
}

.middle-spacing {
  margin-left: 10px;
  margin-right: 10px;
}

.top-label {
  display: flex;
  flex-direction: column;
  margin-bottom: 3px;
}

.rowC {
  display: -webkit-flex;
  display: flex;
  -webkit-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  align-items: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.all-button-style {
  background: none;
  border: none;
  padding: 5px;
  padding-left: 7px;
  padding-right: 7px;
  font-size: 12px;
  transition-duration: 0.4s;
  border-radius: 10px;
  -moz-border-radius: 10px;
  -webkit-border-radius: 10px;
}

.all-button-style:hover {
  cursor: pointer;
  background-color: #a8ccfd;
}

.all-button-style-bg {
  background-color: #d3e6ff;
}

.all-button-style-bg-red {
  background-color: #ffd3d3;
}

.all-button-style-bg-red:hover {
  cursor: pointer;
  background-color: #fda8a8;
}

.all-button-style-icon {
  font-size: 18px;
  padding-bottom: 2px;
}

.highlight-load {
  background-color: #d6d5d5;
}

.search-bar {
  margin: 0 auto;
  padding-top: 5px;
  max-width: 450px;
  width: 80%;
}

.build-collapsible {
  margin: 0 auto;
  margin-top: 8px;
  padding-top: 5px;
  max-width: 450px;
  width: 90%;
}

.popup-content {
  background: #fff;
  border: 1px solid #d7d7d7;
  margin: auto;
  max-width: 400px;
  width: 90%;
}

.dark .popup-content {
  background: rgb(58, 58, 58);
  border: 1px solid #818181;
}

.modal>.header {
  width: 100%;
  font-size: 18px;
  text-align: center;
  padding: 5px;
}

.modal>.content {
  width: 98%;
  padding: 10px 5px;
  margin-right: 5px;
}

.modal>.center-content {
  text-align: center;
}

.modal>.actions {
  width: 100%;
  padding: 10px 5px;
  margin: auto;
  text-align: center;
}

.modal>.close {
  cursor: pointer;
  position: absolute;
  display: block;
  padding: 2px 5px;
  line-height: 20px;
  right: -10px;
  top: -10px;
  font-size: 24px;
  background: #ffffff;
  border-radius: 18px;
  border: 1px solid #cfcece;
}

.dark .modal>.close {
  background: #222222;
  border: 1px solid #cfcece;
}

[role='tooltip'].popup-content {
  max-width: 300px;
  width: fit-content;
  box-shadow: #00000029 0px 0px 3px;
  white-space: nowrap;
  overflow-x: auto;
}

.dark [role='tooltip'].popup-content .popup-arrow {
  color: #3a3a3a;
}

.error {
  color: red;
}

.Collapsible {
  border: 1px solid #cccccc;
  border-radius: 4px;
}

.dark .Collapsible {
  border: 1px solid #4b4b4b;
}

.Collapsible__trigger {
  display: block;
  overflow: hidden;
  width: 100%;
  height: 100%;
  background: #d3e6ff;
  padding-bottom: 5px;
  font-weight: 400;
  text-decoration: none;
  position: relative;
}

.Collapsible__trigger:after {
  font-family: "Font Awesome 6 Free";
  font-weight: 900;
  content: '\f103';
  position: absolute;
  right: 10px;
  top: 4px;
  display: block;
  transition: transform 300ms;
}

.Collapsible__trigger.is-open:after {
  transform: rotateZ(180deg);
}

.Collapsible__trigger:hover {
  background-color: #bcd8ff;
  cursor: pointer;
}

.underline {
  border-bottom: 1px solid #ccc;
  padding-bottom: 5px;
}

/* need to figure out how to get this to work*/
/* ::-webkit-scrollbar:horizontal {
  background: #000;
  border-radius: 10px;
}
  
::-webkit-scrollbar-thumb:horizontal{
  background: #000;
  border-radius: 10px;
} */

.thead .tr {
  border-bottom: 1px solid rgb(61, 61, 61);
}

.dark .thead .tr {
  border-bottom: 1px solid rgb(184, 184, 184);
}

.thead .th {
  border: 0;
  border-radius: none;
  font-family: inherit;
  font-weight: 500;
  font-size: inherit;
  padding: 0.5em;
  margin-bottom: 1px;
  width: 100%;
  height: 100%;
  white-space: nowrap;
  transition-duration: 0.4s;
  background-color: #efefef;
}

.dark .thead .th {
  background-color: #414141;
  border-color: #68696d;
  color: #efefef;
}

.thead .th:hover,
.thead .th.sorted {
  background-color: #bcd8ff;
  cursor: pointer;
}

.dark .thead .th:hover,
.dark .thead .th.sorted {
  background-color: #4650ac;
  color: #EFEFEF;
}

.thead .th .sortspan {
  /* display: inline-block; */
  /* margin-left: 1em; */
}

.tbody .td {
  padding: 0.5em;
  border-bottom: 1px solid #cccccc;
}

.dark .tbody .td {
  border-bottom: 1px solid #4b4b4b;
}

.tbody .tr:hover {
  background-color: #eeeeee;
}

.dark .tbody .tr:hover {
  background-color: #3d3d3d;
}

